2006-06-29  Bill Wohler  <wohler@newt.com>

	* mh-search.el (mh-search, mh-index-group-by-folder): Add "the" in
	loop construct to be consistent with other loops, and because
	edebug doesn't work without it.
	
2006-06-29  Ted Phelps  <phelps@gnusto.com>  (tiny change)

	* mh-search.el (mh-folder-exists-p): Strip + from folder to avoid
	redundant +s in regexp (closes SF #1514424).

2006-06-29  Sergey Poznyakoff  <gray@Mirddin.farlep.net>  (tiny change)

	* mh-mime.el (mh-mime-save-parts): Add -store option to
	mhn (closes SF #1513140).

2006-06-20  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.0.1.

	* mh-e.el (Version, mh-version): Update for release 8.0.1.

2006-06-15  Bill Wohler  <wohler@newt.com>

	* mh-search.el (mh-index-new-folder): Use -2 suffix instead of <2>
	suffix for folder names, as <> are illegal filenakme characters on
	Windows	(closes SF #1507002).
	
2006-06-05  Jacob Morzinski  <morzinski@MIT.EDU>  (tiny change)

	* mh-comp.el (mh-send-uses-spost): New variable.
	(mh-send-letter): Do not use -msgid and -mime if
	mh-send-uses-spost is t (closes SF #1486726).

2006-06-02  Bill Wohler  <wohler@newt.com>
	
	(mh-folder-exists-p): Change test from an empty buffer, to one
	that contains the actual folder, since GNU mailutils' folder
	command displays output if the folder doesn't exist (closes SF
	#1499712).

2006-05-06  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.0.

	* mh-e.el (Version, mh-version): Update for release 8.0.

2006-05-05  Bill Wohler  <wohler@newt.com>

	* mh-e.el: Update commentary.

2006-04-28  Bill Wohler  <wohler@newt.com>

	Release MH-E version 7.95.

	* mh-e.el (Version, mh-version): Update for release 7.95.

2006-04-26  Eric Ding  <ericding@alum.mit.edu>

	* mh-e.el (mh-invisible-header-fields-internal): Add entry
	"X-Provags-ID:"

2006-04-25  Bill Wohler  <wohler@newt.com>

	* mh-letter.el (mh-folder-expand-at-point): Fix folder completion.
	Folders returned by mh-folder-completion-function no longer need